fixed spacer on mobile

--- a/css/custom_styles.css
+++ b/css/custom_styles.css
@@ -60,6 +60,17 @@ body {
     background-attachment: fixed; !important;
 }
 
+@media (min-width: 992px) {
+    .pic-spacer {
+        height: 150px;
+        width: 100%;
+        background-image: url("../assets/chip-background.jpg");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover; !important;
+    }
+}
+
 .jumbotron {
     padding: 5% 0;
 }
